@@ -27,6 +27,11 @@ apm-server:
   # Maximum number of new connections to accept simultaneously (0 means unlimited)
   # max_connections: 0
 
+  # Tracing support for the server's HTTP endpoints and event publisher.
+  #tracing:
+    # Set to true to enable tracing in the APM server itself.
+    #enabled: false
+
   # Authorization token to be checked. If a token is set here the agents must
   # send their token in the following format: Authorization: Bearer <secret-token>.
   # It is recommended to use an authorization token in combination with SSL enabled.
